startuphelper.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpc88fbdcee": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true"
      }
    },
    "subnet1a023b41": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.5.0/24",
        "AvailabilityZone": "us-east-1a",
        "VpcId": {
          "Ref": "vpc88fbdcee"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "RDS subnet"
          }
        ]
      }
    },
    "subnet46033a1d": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/24",
        "AvailabilityZone": "us-east-1a",
        "VpcId": {
          "Ref": "vpc88fbdcee"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Public subnet"
          }
        ]
      }
    },
    "subnet69033a32": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.3.0/24",
        "AvailabilityZone": "us-east-1a",
        "VpcId": {
          "Ref": "vpc88fbdcee"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Public Subnet 2"
          }
        ]
      }
    },
    "subnetd45211b1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.6.0/24",
        "AvailabilityZone": "us-east-1b",
        "VpcId": {
          "Ref": "vpc88fbdcee"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "public subnet2"
          }
        ]
      }
    },
    "subnet03053c58": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": "us-east-1a",
        "VpcId": {
          "Ref": "vpc88fbdcee"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Spring Boot subnet"
          }
        ]
      }
    },
    "subnet5a063f01": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.4.0/24",
        "AvailabilityZone": "us-east-1a",
        "VpcId": {
          "Ref": "vpc88fbdcee"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Spring Boot Subnet 2"
          }
        ]
      }
    },
    "igwa5465ec2": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
      }
    },
    "doptc5b41fa2": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "ec2.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "aclf50efd8c": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc88fbdcee"
        }
      }
    },
    "rtbc14c3ab8": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc88fbdcee"
        }
      }
    },
    "rtbd84036a1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc88fbdcee"
        }
      }
    },
    "eip23234026": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "instancei03ef0a22d06ef0c61": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "IamInstanceProfile": "arn:aws:iam::561819325006:instance-profile/devopsbuddy-full",
        "ImageId": "ami-0b33d91d",
        "InstanceType": "t2.micro",
        "KeyName": "devopsbuddy1.pem",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Visibility",
            "Value": "public"
          },
          {
            "Key": "Name",
            "Value": "Http Server"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet69033a32"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.3.6",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgpublicsg"
              }
            ]
          }
        ]
      }
    },
    "instancei0f919de58383b718f": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "IamInstanceProfile": "arn:aws:iam::561819325006:instance-profile/devopsbuddy-full",
        "ImageId": "ami-0b33d91d",
        "InstanceType": "t2.micro",
        "KeyName": "devopsbuddy1.pem",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Visibility",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "Spring Boot Server"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet03053c58"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.1.167",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgSpringsg"
              }
            ]
          }
        ]
      }
    },
    "instancei07e31d8fe50adbc54": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "IamInstanceProfile": "arn:aws:iam::561819325006:instance-profile/devopsbuddy-full",
        "ImageId": "ami-0b33d91d",
        "InstanceType": "t2.micro",
        "KeyName": "devopsbuddy1.pem",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Visibility",
            "Value": "public"
          },
          {
            "Key": "Name",
            "Value": "Bastion Host"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet46033a1d"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.0.214",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgBastionhostsg"
              }
            ]
          }
        ]
      }
    },
    "rdsdevopsbuddy": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "AllocatedStorage": "5",
        "AllowMajorVersionUpgrade": "false",
        "AutoMinorVersionUpgrade": "true",
        "DBInstanceClass": "db.t2.micro",
        "Port": "3306",
        "StorageType": "gp2",
        "BackupRetentionPeriod": "0",
        "MasterUsername": "devopsbuddy",
        "MasterUserPassword": "MyPassword",
        "PreferredBackupWindow": "04:18-04:48",
        "PreferredMaintenanceWindow": "fri:07:27-fri:07:57",
        "DBName": "MyDatabase",
        "Engine": "mysql",
        "EngineVersion": "5.6.27",
        "LicenseModel": "general-public-license",
        "DBSubnetGroupName": {
          "Ref": "dbsubnetdevopsbuddysubnetgroup"
        },
        "VPCSecurityGroups": [
          {
            "Ref": "sgRdssg"
          }
        ],
        "Tags": [
          {
            "Key": "workload-type",
            "Value": "other"
          }
        ]
      }
    },
    "s3startuphelpertheodoreconfig": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "AccessControl": "Private",
        "VersioningConfiguration": {
          "Status": "Suspended"
        }
      }
    },
    "dbsubnetdevopsbuddysubnetgroup": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Devopsbuddy subnet group",
        "SubnetIds": [
          {
            "Ref": "subnet1a023b41"
          },
          {
            "Ref": "subnetd45211b1"
          }
        ]
      }
    },
    "sgBastionhostsg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Bastion host sg",
        "VpcId": {
          "Ref": "vpc88fbdcee"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Bastion host sg"
          }
        ]
      }
    },
    "sgdefault": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "default VPC security group",
        "VpcId": "vpc-a9a512cf"
      }
    },
    "sgpublicsg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "public sg",
        "VpcId": {
          "Ref": "vpc88fbdcee"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "public sg"
          }
        ]
      }
    },
    "sgRdssg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Rds sg",
        "VpcId": {
          "Ref": "vpc88fbdcee"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Rds sg"
          }
        ]
      }
    },
    "sgrdslaunchwizard": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Created from the RDS Management Console",
        "VpcId": "vpc-a9a512cf"
      }
    },
    "sgSpringsg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Spring sg",
        "VpcId": {
          "Ref": "vpc88fbdcee"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "Spring sg"
          }
        ]
      }
    },
    "sgStartupHelperCloudFormerWebServerSecurityGroupZ7KGTWTX2T5U": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable HTTPS access via port 443",
        "VpcId": "vpc-5c6aaf25"
      }
    },
    "dbsgdefault": {
      "Type": "AWS::RDS::DBSecurityGroup",
      "Properties": {
        "GroupDescription": "default"
      }
    },
    "s3policystartuphelpertheodoreconfig": {
      "Type": "AWS::S3::BucketPolicy",
      "Properties": {
        "Bucket": {
          "Ref": "s3startuphelpertheodoreconfig"
        },
        "PolicyDocument": {
          "Version": "2012-10-17",
          "Id": "Policy1463904182882",
          "Statement": [
            {
              "Sid": "Stmt1463904178865",
              "Effect": "Allow",
              "Principal": "*",
              "Action": "s3:*",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:s3:::",
                      {
                        "Ref": "s3startuphelpertheodoreconfig"
                      },
                      "/*"
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:aws:s3:::",
                      {
                        "Ref": "s3startuphelpertheodoreconfig"
                      },
                      ""
                    ]
                  ]
                }
              ],
              "Condition": {
                "StringEquals": {
                  "aws:sourceVpc": "vpc-88fbdcee"
                },
                "IpAddress": {
                  "aws:SourceIp": "98.233.43.161/32"
                }
              }
            }
          ]
        }
      }
    },
    "acl3": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "aclf50efd8c"
        }
      }
    },
    "acl4": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "aclf50efd8c"
        }
      }
    },
    "subnetacl7": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "aclf50efd8c"
        },
        "SubnetId": {
          "Ref": "subnet69033a32"
        }
      }
    },
    "subnetacl8": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "aclf50efd8c"
        },
        "SubnetId": {
          "Ref": "subnet46033a1d"
        }
      }
    },
    "subnetacl9": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "aclf50efd8c"
        },
        "SubnetId": {
          "Ref": "subnet1a023b41"
        }
      }
    },
    "subnetacl10": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "aclf50efd8c"
        },
        "SubnetId": {
          "Ref": "subnetd45211b1"
        }
      }
    },
    "subnetacl11": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "aclf50efd8c"
        },
        "SubnetId": {
          "Ref": "subnet03053c58"
        }
      }
    },
    "subnetacl12": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "aclf50efd8c"
        },
        "SubnetId": {
          "Ref": "subnet5a063f01"
        }
      }
    },
    "gw2": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc88fbdcee"
        },
        "InternetGatewayId": {
          "Ref": "igwa5465ec2"
        }
      }
    },
    "subnetroute7": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtbc14c3ab8"
        },
        "SubnetId": {
          "Ref": "subnet5a063f01"
        }
      }
    },
    "subnetroute8": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtbc14c3ab8"
        },
        "SubnetId": {
          "Ref": "subnet03053c58"
        }
      }
    },
    "subnetroute9": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtbc14c3ab8"
        },
        "SubnetId": {
          "Ref": "subnet1a023b41"
        }
      }
    },
    "subnetroute11": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtbd84036a1"
        },
        "SubnetId": {
          "Ref": "subnet46033a1d"
        }
      }
    },
    "subnetroute12": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtbd84036a1"
        },
        "SubnetId": {
          "Ref": "subnet69033a32"
        }
      }
    },
    "route3": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtbc14c3ab8"
        }
      }
    },
    "route4": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtbd84036a1"
        },
        "GatewayId": {
          "Ref": "igwa5465ec2"
        }
      },
      "DependsOn": "gw2"
    },
    "dchpassoc2": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc88fbdcee"
        },
        "DhcpOptionsId": {
          "Ref": "doptc5b41fa2"
        }
      }
    },
    "ingress13": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgBastionhostsg"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "98.233.43.161/32"
      }
    },
    "ingress14": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": {
          "Ref": "sgdefault"
        },
        "SourceSecurityGroupOwnerId": "561819325006"
      }
    },
    "ingress15": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": {
          "Ref": "sgdefault"
        },
        "SourceSecurityGroupOwnerId": "561819325006"
      }
    },
    "ingress16": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": {
          "Ref": "sgdefault"
        },
        "SourceSecurityGroupOwnerId": "561819325006"
      }
    },
    "ingress17": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgpublicsg"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress18": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgpublicsg"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "98.233.43.161/32"
      }
    },
    "ingress19": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgpublicsg"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress20": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgRdssg"
        },
        "IpProtocol": "tcp",
        "FromPort": "3306",
        "ToPort": "3306",
        "SourceSecurityGroupId": {
          "Ref": "sgSpringsg"
        },
        "SourceSecurityGroupOwnerId": "561819325006"
      }
    },
    "ingress21": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgrdslaunchwizard"
        },
        "IpProtocol": "tcp",
        "FromPort": "3306",
        "ToPort": "3306",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress22": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgSpringsg"
        },
        "IpProtocol": "tcp",
        "FromPort": "8080",
        "ToPort": "8080",
        "SourceSecurityGroupId": {
          "Ref": "sgpublicsg"
        },
        "SourceSecurityGroupOwnerId": "561819325006"
      }
    },
    "ingress23": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgSpringsg"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "SourceSecurityGroupId": {
          "Ref": "sgBastionhostsg"
        },
        "SourceSecurityGroupOwnerId": "561819325006"
      }
    },
    "ingress24": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgStartupHelperCloudFormerWebServerSecurityGroupZ7KGTWTX2T5U"
        },
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress10": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgBastionhostsg"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress11": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress12": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress13": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress14": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgpublicsg"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress15": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgRdssg"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress16": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgrdslaunchwizard"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress17": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgSpringsg"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress18": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgStartupHelperCloudFormerWebServerSecurityGroupZ7KGTWTX2T5U"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": "StartupHelper aws resources"
}
